fixed <select> elements not showing properly in webkit based browsers

--- a/css/global_noanim.css
+++ b/css/global_noanim.css
@@ -33,6 +33,7 @@ a:hover {
 
 select {
 	-webkit-appearance: none;
+	-webkit-border-radius: 0px;
 	-moz-appearance: none;
 	appearance: none;
 	background: url(dropdown.ico) right / 20px no-repeat #000;
